--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html> <html>  <head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width" />  <title>CSS Transitions</title>  <link href="style.css" rel="stylesheet" type="text/css" />  </head>  <body>  </body> </html>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width" />
+	<title>CSS Transitions</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <h1>hi</h1>
+  
+</body>
+
+</html>
