--- a/makingADifference.html
+++ b/makingADifference.html
@@ -27,7 +27,7 @@
 			</li>
 		</ul>
 	</nav>
-	<img class="float-right" src="preventingan.jpg" width="150px"/>
+	<img class="float-right" src="https://via.placeholder.com/150"/>
  <p> one reason to stop animal cruelty is to stop beating your animals.  
  another reason is to stop abandoning your animal these are some type of stuff that happens your dog they get paranoid and they can get hurt or even worst killed.another thing that can happen is that your dog can be scared for life and not go outside depending on what type of abuse it had in the past.</p>
  
