i change the heading color and i changed a couple of things in the last page

--- a/bringingAwareness.html
+++ b/bringingAwareness.html
@@ -6,10 +6,13 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>CSS Transitions</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Sancreek&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rufina&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-	<h1 class="page-heading">Stop animal cruelty</h1>
+	<h1 class="page-heading">bringing awarness</h1>
 	<nav class="navbar">
 		<ul>
 
@@ -28,8 +31,11 @@
 		</ul>
 	</nav>
 	<img class="float-right" src="forever-home-adoption-a.jpg"width="150px"/>
- <p> one reason to stop animal cruelty is to stop beating your animals.  
- another reason is to stop abandoning your animal these are some type of stuff that happens your dog they get paranoid and they can get hurt or even worst killed.another thing that can happen is that your dog can be scared for life and not go outside depending on what type of abuse it had in the past.</p>
+ <p>  Everyday there is a case of animal cruelty  in this world these in about  one 
+million  pets die a year due to animal cruelty that is one million of these 
+animals dying losing there lives or getting injured due to people being cruel
+and not caring about how these animals feel but just worrying about themselves and its messed up how they are getting treated .Those animals that are mostly the victims of animal cruelty is dogs,cats,horses and other live stockmost of them is farm factory live stock.
+    </p>
  
 </body>
 
