--- a/findingASolution.html
+++ b/findingASolution.html
@@ -6,10 +6,13 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>CSS Transitions</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Sancreek&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rufina&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-	<h1 class="page-heading">Stop animal cruelty</h1>
+	<h1 class="page-heading">finding a solution</h1>
 	<nav class="navbar">
 		<ul>
 
@@ -27,9 +30,12 @@
 			</li>
 		</ul>
 	</nav>
-	<img class="float-right" src="https://via.placeholder.com/150"/>
- <p> one reason to stop animal cruelty is to stop beating your animals.  
- another reason is to stop abandoning your animal these are some type of stuff that happens your dog they get paranoid and they can get hurt or even worst killed.another thing that can happen is that your dog can be scared for life and not go outside depending on what type of abuse it had in the past.</p>
+	
+ <p> one way we can help theses helpless animals is by getting them in a shelter so they 
+can be adopted by people that actually love them and they will know what a
+real family bond is and they will know they are loved .Also we can make sure that
+whoever was abusing there animals they get arrested and pay for how bad they 
+treated there animal .</p>
  
 </body>
 
