--- a/makingADifference.html
+++ b/makingADifference.html
@@ -6,10 +6,13 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>CSS Transitions</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Sancreek&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rufina&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-	<h1 class="page-heading">Stop animal cruelty</h1>
+	<h1 class="page-heading">making a difference</h1>
 	<nav class="navbar">
 		<ul>
 
@@ -27,9 +30,9 @@
 			</li>
 		</ul>
 	</nav>
-	<img class="float-right" src="https://via.placeholder.com/150"/>
- <p> one reason to stop animal cruelty is to stop beating your animals.  
- another reason is to stop abandoning your animal these are some type of stuff that happens your dog they get paranoid and they can get hurt or even worst killed.another thing that can happen is that your dog can be scared for life and not go outside depending on what type of abuse it had in the past.</p>
+
+ <p> you can save one of these animals that is a case of animal cruelty and you can give these animals the voice that they need and you can give them the home that they deseve and the family that they want you can give these animals eveything and you can stop the animal cruelty that is going right now in this world.
+</p>
  
 </body>
 
