--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>CSS Transitions</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Sancreek&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rufina&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
