added more stuff to each page

--- a/bringingAwareness.html
+++ b/bringingAwareness.html
@@ -34,7 +34,11 @@
  <p>  Everyday there is a case of animal cruelty  in this world these in about  one 
 million  pets die a year due to animal cruelty that is one million of these 
 animals dying losing there lives or getting injured due to people being cruel
-and not caring about how these animals feel but just worrying about themselves and its messed up how they are getting treated .Those animals that are mostly the victims of animal cruelty is dogs,cats,horses and other live stockmost of them is farm factory live stock.
+and not caring about how these animals feel but just worrying about themselves and its messed up how they are getting treated .Those animals that are mostly the victims of animal cruelty is dogs,cats,horses and other live stockmost of them is farm factory live stock.Animal cruelty can take many different forms, as you’ll discover below, but the impact is always the same. A sentient animal capable of love and creating social relationships experience pain, fear, and desperation. And it needs to stop.
+
+We live in a world that not only turns a blind eye to animal cruelty but condones it — whether through indifference or legislation. It’s legal to raise chickens in deplorable conditions for the sole purpose of slaughtering them later. If that isn’t animal cruelty, then what is?
+
+The problem is that there aren’t enough people fighting for animal rights. If everyone started to look at animals — and not just dogs and cats — as fellow animals who share our planet, we would see far fewer cases of cruelty toward animals.
     </p>
  
 </body>
