--- a/findingASolution.html
+++ b/findingASolution.html
@@ -35,7 +35,8 @@
 can be adopted by people that actually love them and they will know what a
 real family bond is and they will know they are loved .Also we can make sure that
 whoever was abusing there animals they get arrested and pay for how bad they 
-treated there animal .</p>
+treated there animal.
+It’s incredibly hard for most pet parents to understand why people would intentionally hurt their own dogs. Why would people go out of their way to inflict pain on their pets or allow suffering through negligence? Although conditions for companion animals have greatly improved over the last few decades, especially in Western societies, there are still many people who view dogs the old-fashioned way: as property. These individuals typically don’t recognize pets as sentient beings capable of having emotions, only as objects they have the right to do with as they wish. And sometimes, that includes acts of cruelty.wich is messed up.So if you witness or suspect animal abuse, don’t just stand there — report it! Your call may be the only chance that dog has to find help and possibly be rescued from a miserable or life-threatening situation. Animal cruelty is a crime, and the more often abusive individuals are punished for their behavior, the less likely others will be inclined to do the same. Animals have no voice, so it is our obligation and duty to speak for them, especially when they’re being mistreated.</p>
  
 </body>
 
