--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 	</nav>
 	<img class="float-right" src="preventingan.jpg" width="150px"/>
  <p> one reason to stop animal cruelty is to stop beating your animals.  
- another reason is to stop abandoning your animal these are some type of stuff that happens your dog they get paranoid and they can get hurt or even worst killed.another thing that can happen is that your dog can be scared for life and not go outside depending on what type of abuse it had in the past.</p>
+ another reason is to stop abandoning your animal these are some type of stuff that happens your dog they get paranoid and they can get hurt or even worst killed.another thing that can happen is that your dog can be scared for life and not go outside depending on what type of abuse it had in the past.The shocking number of animal cruelty cases reported every day is just the tip of the iceberg—most cases are never reported. Unlike violent crimes against people, cases of animal abuse are not compiled by state or federal agencies, making it difficult to calculate just how common they are. However, we can use the information that is available to try to understand and prevent cases of abuse.
+
+</p>
  
 </body>
 
