--- a/makingADifference.html
+++ b/makingADifference.html
@@ -31,9 +31,9 @@
 		</ul>
 	</nav>
 
- <p> Only you can save one of these animals that is a case of animal cruelty and you can give these animals the voice that they need and you can give them the home that they deseve and the family that they want you can give these animals eveything and you can stop the animal cruelty that is going right now in this world.
+ <p> Only you can save one of these animals that is a case of animal cruelty and you can give these animals the voice that they need and you can give them the home that they deseve and the family that they want you can give these animals eveything and you can stop the animal cruelty that is going right now in this world.if you agree with me you can stop this just donate and you can save these animals from a case of animal cruelty.
 </p>
- 
+ <a href=“URL-To-Donation-Page”>click here to donate</a> 
 </body>
 
 </html>
